--- a/seokhyun/chap3.mdx
+++ b/seokhyun/chap3.mdx
@@ -12,7 +12,6 @@ description: 리액트 핵심 요소 깊게 살펴보기 - useEffect
     - 배열 o, 빈 배열 o, 생략 o,
 - 클래스 컴포넌트의 생명주기 메서드와 비슷한 작동을 구현할수있다.
 - 두번째 의존성 배열에 빈 배열을 넣으면 컴포넌트가 마운트 될때만 실행된다.
-- useEffect는 클린업 함수를 반환할수있는데, 이 클린업 함수는 컴포넌트가 언마운트될때 실행된다.
 
 - 생명주기 메서드를 대체하기위해 개발된 훅이 아니다.
 - 애플리케이션 내 컴포넌트의 여러값들을 활용해 동기적으로 부수 효과를 만드는 메커니즘이다.
@@ -104,4 +103,4 @@ function Component() {
 - 그로인해 콜백내의 이벤트가 사라져 무한하게 추가되는것을 방지할수있다.
 
 - useEffect는 렌더링 이후에 실행되기때문에, 렌더링 이전에 실행되는 작업을 하고싶다면, useEffect의 의존성 배열에 값을 넣지않는다.
-- 값을 넣지않고 사용하면 렌더링 후 재렌더링을 위해 깜빡임이 생길 수 있다.
+- 값을 넣고 사용하면 렌더링 후 재렌더링을 위해 깜빡임이 생길 수 있다.
