add next13 desc

--- a/jiyoung/chap4.mdx
+++ b/jiyoung/chap4.mdx
@@ -44,3 +44,20 @@ description: 서버 사이드 렌더링
 #### 적절한 서버가 구축돼 있어야 한다.
 
 - 사용자의 요청에 따라 적절하게 대응할 수 있는 물리적인 가용량을 확보해야 하고, 예기치 않은 장애 상황에 대응할 수 있도록 복구 전략도 필요하다.
+
+---
+
+## More About Next.js ver 13
+
+### App Directory
+
+- Layout: 상태를 유지하고 비용이 많이 드는 재렌더링을 피하면서 경로 간에 UI를 쉽게 공유할 수 있다.
+- Server Component: 가장 동적인 응용 프로그램에 대해 서버 우선을 기본값으로 만든다.
+- Streaming: 즉시 로딩 상태를 표시하고 렌더링되는 UI 단위로 스트리밍한다.
+- 데이터 가져오기 지원: async Server Component 및 fetchAPI를 통해 컴포넌트 레벨 fetcing이 가능하다.
+
+이 app/디렉토리는 React의 새로운 서버 구성 요소 아키텍처에 대한 지원을 소개합니다. 서버 및 클라이언트 구성 요소는 각각의 장점에 맞게 서버와 클라이언트를 사용하므로 뛰어난 개발자 경험을 제공하는 단일 프로그래밍 모델로 빠르고 상호작용성이 뛰어난 앱을 구축할 수 있습니다.
+
+서버 구성 요소를 통해 우리는 클라이언트로 전송되는 JavaScript의 양을 줄 이면서 복잡한 인터페이스를 구축할 수 있는 기반을 마련하여 더 빠른 초기 페이지 로드를 가능하게 합니다.
+
+경로가 로드되면 Next.js 및 React 런타임이 로드되며 이는 캐시 가능 하고 크기가 예측 가능합니다 . 이 런타임은 애플리케이션이 커져도 크기가 늘어나지 않습니다 . 또한 런타임이 비동기식으로 로드되므로 서버의 HTML이 클라이언트에서 점진적으로 향상될 수 있습니다.
