--- a/jiyoung/chap4.mdx
+++ b/jiyoung/chap4.mdx
@@ -53,11 +53,39 @@ description: 서버 사이드 렌더링
 
 - Layout: 상태를 유지하고 비용이 많이 드는 재렌더링을 피하면서 경로 간에 UI를 쉽게 공유할 수 있다.
 - Server Component: 가장 동적인 응용 프로그램에 대해 서버 우선을 기본값으로 만든다.
+  - Server Component를 통해 클라이언트로 전송되는 JavaScript의 양을 줄이면서 복잡한 인터페이스를 구축할 수 있는 기반을 마련하여, 더 빠른 초기 페이지 로드를 가능하게 한다.
 - Streaming: 즉시 로딩 상태를 표시하고 렌더링되는 UI 단위로 스트리밍한다.
-- 데이터 가져오기 지원: async Server Component 및 fetchAPI를 통해 컴포넌트 레벨 fetcing이 가능하다.
+- Data fetching 지원: async Server Component 및 fetchAPI를 통해 컴포넌트 레벨 fetcing이 가능하다.
 
-이 app/디렉토리는 React의 새로운 서버 구성 요소 아키텍처에 대한 지원을 소개합니다. 서버 및 클라이언트 구성 요소는 각각의 장점에 맞게 서버와 클라이언트를 사용하므로 뛰어난 개발자 경험을 제공하는 단일 프로그래밍 모델로 빠르고 상호작용성이 뛰어난 앱을 구축할 수 있습니다.
+#### Server Component의 렌더링
 
-서버 구성 요소를 통해 우리는 클라이언트로 전송되는 JavaScript의 양을 줄 이면서 복잡한 인터페이스를 구축할 수 있는 기반을 마련하여 더 빠른 초기 페이지 로드를 가능하게 합니다.
+- 렌더링 작업은 개별 경로 세그먼트 및 서스펜스 경계를 ​​기준으로 청크로 분할
 
-경로가 로드되면 Next.js 및 React 런타임이 로드되며 이는 캐시 가능 하고 크기가 예측 가능합니다 . 이 런타임은 애플리케이션이 커져도 크기가 늘어나지 않습니다 . 또한 런타임이 비동기식으로 로드되므로 서버의 HTML이 클라이언트에서 점진적으로 향상될 수 있습니다.
+  - React는 서버 구성요소를 React Server Component Payload(RSC Payload) 라는 특수 데이터 형식으로 렌더링
+  - Next.js는 RSC 페이로드 및 클라이언트 구성 요소 JavaScript 지침을 사용하여 서버에서 HTML을 렌더링
+
+- 클라이언트에서 다음을 수행함
+  - HTML은 경로의 빠른 non-interactive 미리보기를 즉시 표시하는 데 사용된다. 이는 초기 페이지 로드에만 해당함
+  - React Server Component 페이로드는 클라이언트 및 서버 컴포넌트 트리를 조정하고 DOM을 업데이트하는 데 사용한다
+  - JavaScript 지침은 hydrate하는 데 사용된다. 클라이언트 컴포넌트를 선택하고 응용 프로그램을 대화형으로 만든다
+
+#### Next.js에서는 서버 렌더링 전략을 세 가지로 나눈다: 정적렌더링, 동적렌더링, 스트리밍
+
+1. 정적 렌더링(기본값)
+
+- 빌드 시간 또는 데이터 재검증 후 백그라운드에서 라우트를 렌더링합니다.
+- 결과는 캐시되고 CDN에 푸시될 수 있습니다.
+- 사용자나 서버 요청 간에 렌더링 작업 결과를 공유할 수 있습니다.
+- 사용자에게 개인화되지 않은 정적 블로그 글이나 제품 페이지 등에 유용합니다.
+
+2. 동적 렌더링
+
+- 각 사용자 요청 시 라우트를 렌더링합니다.
+- 쿠키나 URL 검색 매개변수 등 요청 시간에만 알 수 있는 사용자 개인화 데이터나 정보가 있는 라우트에 유용합니다.
+
+3. 캐시된 데이터를 사용하는 동적 라우트
+
+- 대부분 웹사이트의 라우트는 완전히 정적이거나 동적이지 않습니다.
+- Next.js에서는 캐시된 데이터와 캐시되지 않은 데이터를 별도로 캐싱하므로 동적 렌더링을 사용하면서도 성능 영향을 줄일 수 있습니다.
+
+개발자는 정적/동적 렌더링 전략을 직접 선택할 필요가 없습니다. Next.js가 자동으로 가장 적절한 전략을 선택합니다. 대신 특정 데이터를 캐시하거나 재검증할 시기, 일부 UI를 스트리밍할지 여부를 선택하면 됩니다.
