--- a/jiyoung/chap4.mdx
+++ b/jiyoung/chap4.mdx
@@ -71,21 +71,94 @@ description: 서버 사이드 렌더링
 
 #### Next.js에서는 서버 렌더링 전략을 세 가지로 나눈다: 정적렌더링, 동적렌더링, 스트리밍
 
-1. 정적 렌더링(기본값)
+1. **정적 렌더링(기본값)**
 
-- 빌드 시간 또는 데이터 재검증 후 백그라운드에서 라우트를 렌더링합니다.
-- 결과는 캐시되고 CDN에 푸시될 수 있습니다.
-- 사용자나 서버 요청 간에 렌더링 작업 결과를 공유할 수 있습니다.
-- 사용자에게 개인화되지 않은 정적 블로그 글이나 제품 페이지 등에 유용합니다.
+- 빌드 시간 또는 데이터 재검증 후 백그라운드에서 라우트를 렌더링
+- 결과는 캐시되고 CDN에 푸시될 수 있다.
+- 사용자나 서버 요청 간에 렌더링 작업 결과를 공유할 수 있다.
+- 사용자에게 개인화되지 않은 정적 블로그 글이나 제품 페이지 등에 유용하다.
 
-2. 동적 렌더링
+2. **동적 렌더링**
 
-- 각 사용자 요청 시 라우트를 렌더링합니다.
-- 쿠키나 URL 검색 매개변수 등 요청 시간에만 알 수 있는 사용자 개인화 데이터나 정보가 있는 라우트에 유용합니다.
+- 각 사용자 요청 시 라우트를 렌더링
+- 쿠키나 URL 검색 매개변수 등 요청 시간에만 알 수 있는 사용자 개인화 데이터나 정보가 있는 라우트에 유용하다.
 
-3. 캐시된 데이터를 사용하는 동적 라우트
+3. **캐시된 데이터를 사용하는 동적 라우트**
 
-- 대부분 웹사이트의 라우트는 완전히 정적이거나 동적이지 않습니다.
-- Next.js에서는 캐시된 데이터와 캐시되지 않은 데이터를 별도로 캐싱하므로 동적 렌더링을 사용하면서도 성능 영향을 줄일 수 있습니다.
+- 대부분 웹사이트의 라우트는 완전히 정적이거나 동적이지 않다.
+- Next.js에서는 캐시된 데이터와 캐시되지 않은 데이터를 별도로 캐싱하므로 동적 렌더링을 사용하면서도 성능 영향을 줄일 수 있다.
 
-개발자는 정적/동적 렌더링 전략을 직접 선택할 필요가 없습니다. Next.js가 자동으로 가장 적절한 전략을 선택합니다. 대신 특정 데이터를 캐시하거나 재검증할 시기, 일부 UI를 스트리밍할지 여부를 선택하면 됩니다.
+4. **스트리밍**
+
+- 스트리밍은 서버에서 UI를 점진적으로 렌더링할 수 있게 해준다.
+
+  - 작업이 여러 덩어리로 나뉘어 각 덩어리가 준비되는 대로 클라이언트로 스트리밍
+  - 전체 콘텐츠 렌더링이 완료되기 전에도 페이지의 일부를 먼저 볼 수 있게 된다.
+
+- Next.js App Router에는 기본적으로 스트리밍 기능이 내장되어 있다.
+  - 초기 페이지 로딩 성능을 개선할 뿐 아니라 느린 데이터 fetching으로 인해 전체 라우트 렌더링이 지연되는 UI에서도 도움이 된다. - ex. 제품 페이지의 리뷰
+
+### Data Fetching
+
+- 예시 코드를 보면, async/await 문법을 사용하여 getData 함수 내에서 fetch API를 활용해 데이터를 가져온다. 이렇게 반환된 값은 직렬화되지 않고 Date, Map, Set 등 다양한 타입을 그대로 사용할 수 있다.
+- Page 컴포넌트 역시 async 함수로 선언되어 있어 await getData()를 통해 가져온 데이터를 렌더링에 활용할 수 있다.
+- 기본 fetch Web API가 확장되어 컴포넌트 수준에서 fetch 요청을 자동으로 중복 제거하고, 데이터를 fetch, 캐시, 재검증할 수 있는 유연한 방법을 제공한다.
+- app 디렉토리에서는 레이아웃, 페이지, 컴포넌트 내에서 모두 데이터를 fetch할 수 있고 서버에서 스트리밍된 응답도 지원한다.
+
+### `next/image`, `@next/font`, `next/link`
+
+#### next/image
+
+- `Image` 컴포넌트가 도입되어 레이아웃 변화 없이 이미지를 쉽게 표시하고 필요에 따라 파일을 최적화할 수 있다.
+- 기존 Image 컴포넌트보다 클라이언트 측 자바스크립트 양이 줄어들었다.
+- 스타일링과 구성이 더 쉬워졌고, 접근성을 위해 기본적으로 alt 태그가 필수이다.
+- 웹 플랫폼과 잘 맞춰졌고, 네이티브 지연 로딩으로 인해 hydration이 필요 없어 더 빨라졌다.
+
+  ```jsx
+  import Image from "next/image";
+  import avatar from "./lee.png";
+
+  export default function Home() {
+    // "alt" is now required for improved accessibility
+    // optional: image files can be colocated inside the app/ directory
+    return <Image alt="leeerob" src={avatar} placeholder="blur" />;
+  }
+  ```
+
+#### @next/font
+
+- 폰트를 자동 최적화하고 외부 네트워크 요청을 제거하여 프라이버시와 성능이 향상되었다.
+- 모든 폰트 파일에 대해 자동 셀프 호스팅이 내장되어 있다.
+- CSS `size-adjust` 속성을 사용하여 레이아웃 변화를 자동으로 제거한다.
+- 구글 웹폰트를 성능과 프라이버시를 고려하여 편리하게 사용할 수 있다.
+
+  ```jsx
+  import { Inter } from "@next/font/google";
+  const inter = Inter();
+  <html className={inter.className}></html>;
+  ```
+
+- 사용자 정의 폰트도 지원되며, 자동 셀프 호스팅, 캐싱, 프리로딩이 가능하다.
+
+  ```jsx
+  import localFont from "@next/font/local";
+  const myFont = localFont({ src: "./my-font.woff2" });
+  <html className={myFont.className}></html>;
+  ```
+
+#### next/link
+
+- `next/link`에서 더 이상 `<a>` 자식 요소를 수동으로 추가할 필요가 없다.
+- `<Link>`는 항상 `<a>`를 렌더링하고 기본 태그에 props를 전달할 수 있다.
+
+  ```jsx
+  import Link from 'next/link'
+  // Next.js 12: `<a>` has to be nested otherwise it's excluded
+  <Link href="/about">
+    <a>About</a>
+  </Link>
+  // Next.js 13: `<Link>` always renders `<a>`
+  <Link href="/about">
+    About
+  </Link>
+  ```
