--- a/jiyoung/chap4.mdx
+++ b/jiyoung/chap4.mdx
@@ -51,23 +51,26 @@ description: 서버 사이드 렌더링
 
 ### App Directory
 
-- Layout: 상태를 유지하고 비용이 많이 드는 재렌더링을 피하면서 경로 간에 UI를 쉽게 공유할 수 있다.
-- Server Component: 가장 동적인 응용 프로그램에 대해 서버 우선을 기본값으로 만든다.
+- `Layout`: 상태를 유지하고 비용이 많이 드는 재렌더링을 피하면서 경로 간에 UI를 쉽게 공유할 수 있다.
+- `Server Component`: 가장 동적인 응용 프로그램에 대해 서버 우선을 기본값으로 만든다.
   - Server Component를 통해 클라이언트로 전송되는 JavaScript의 양을 줄이면서 복잡한 인터페이스를 구축할 수 있는 기반을 마련하여, 더 빠른 초기 페이지 로드를 가능하게 한다.
-- Streaming: 즉시 로딩 상태를 표시하고 렌더링되는 UI 단위로 스트리밍한다.
-- Data fetching 지원: async Server Component 및 fetchAPI를 통해 컴포넌트 레벨 fetcing이 가능하다.
+- `Streaming`: 즉시 로딩 상태를 표시하고 렌더링되는 UI 단위로 스트리밍한다.
+- `Data fetching 지원`: async Server Component 및 fetchAPI를 통해 컴포넌트 레벨 fetcing이 가능하다.
 
 #### Server Component의 렌더링
 
 - 렌더링 작업은 개별 경로 세그먼트 및 서스펜스 경계를 ​​기준으로 청크로 분할
 
+  - 경로 세그먼트 기준 청크 분할: /products/[id] 페이지라면 /products와 [id] 부분이 각각 별도의 청크
+  - Suspense boundaries 기준 청크 분할
+  - 청크 분할을 하면 Next.js는 필요한 부분만 렌더링하여 전송할 수 있다. 초기에는 작은 청크부터 렌더링되므로 사용자는 더 빠르게 콘텐츠를 볼 수 있다.
   - React는 서버 구성요소를 React Server Component Payload(RSC Payload) 라는 특수 데이터 형식으로 렌더링
-  - Next.js는 RSC 페이로드 및 클라이언트 구성 요소 JavaScript 지침을 사용하여 서버에서 HTML을 렌더링
 
 - 클라이언트에서 다음을 수행함
-  - HTML은 경로의 빠른 non-interactive 미리보기를 즉시 표시하는 데 사용된다. 이는 초기 페이지 로드에만 해당함
-  - React Server Component 페이로드는 클라이언트 및 서버 컴포넌트 트리를 조정하고 DOM을 업데이트하는 데 사용한다
-  - JavaScript 지침은 hydrate하는 데 사용된다. 클라이언트 컴포넌트를 선택하고 응용 프로그램을 대화형으로 만든다
+  - 서버에서 렌더링된 HTML이 경로의 초기 미리보기로 즉시 표시하는데, 이는 초기 페이지 로드에만 해당함
+  - RSC Payload는 클라이언트와 서버 컴포넌트 트리를 조정하고 DOM을 업데이트하는 데 사용
+  - JavaScript 코드는 클라이언트 컴포넌트를 hydrate(활성화)하고 애플리케이션을 대화형으로 만드는 데 사용
+    - hydration은 서버 렌더링과 클라이언트 렌더링을 연결하는 과정으로, 초기에는 정적 HTML로 렌더링되어 빠르게 콘텐츠를 표시하고, 이후 React 앱이 하이드레이션되면서 대화형 UI로 전환
 
 #### Next.js에서는 서버 렌더링 전략을 세 가지로 나눈다: 정적렌더링, 동적렌더링, 스트리밍
 
@@ -77,16 +80,68 @@ description: 서버 사이드 렌더링
 - 결과는 캐시되고 CDN에 푸시될 수 있다.
 - 사용자나 서버 요청 간에 렌더링 작업 결과를 공유할 수 있다.
 - 사용자에게 개인화되지 않은 정적 블로그 글이나 제품 페이지 등에 유용하다.
+  ```jsx
+  // 빌드 시간에 about.js 페이지가 렌더링되어 정적 HTML 파일로 생성
+  // pages/about.js
+  export default function About() {
+    return <div>About Page (Static Rendering)</div>;
+  }
+  ```
 
 2. **동적 렌더링**
 
 - 각 사용자 요청 시 라우트를 렌더링
 - 쿠키나 URL 검색 매개변수 등 요청 시간에만 알 수 있는 사용자 개인화 데이터나 정보가 있는 라우트에 유용하다.
 
+  ```jsx
+  // pages/profile/[username].js
+
+  import React from "react";
+  import { useRouter } from "next/router";
+
+  function ProfilePage() {
+    const router = useRouter();
+    const { username } = router.query;
+    return (
+      <div>
+        <h1>{username}의 프로필</h1>
+        <p>
+          안녕하세요, {username}님! 이 페이지는 Next.js의 동적 렌더링
+          예시입니다.
+        </p>
+      </div>
+    );
+  }
+  export default ProfilePage;
+  ```
+
 3. **캐시된 데이터를 사용하는 동적 라우트**
 
 - 대부분 웹사이트의 라우트는 완전히 정적이거나 동적이지 않다.
 - Next.js에서는 캐시된 데이터와 캐시되지 않은 데이터를 별도로 캐싱하므로 동적 렌더링을 사용하면서도 성능 영향을 줄일 수 있다.
+
+  ```jsx
+  // pages/news/[category].js
+  // 뉴스 웹사이트에서 최신 기사 목록은 동적이지만 자주 변경
+  import React from "react";
+  import { useRouter } from "next/router";
+
+  function NewsPage() {
+    const router = useRouter();
+    const { category } = router.query;
+
+    // category에 따라 해당하는 뉴스를 가져오는 로직
+    return (
+      <div>
+        <h1>{category} 카테고리 뉴스</h1>
+        {/* 동적으로 렌더링된 뉴스 목록을 여기에 표시 */}
+      </div>
+    );
+  }
+  export default NewsPage;
+  ```
+
+  - 뉴스 웹사이트에서 사용자가 "스포츠" 카테고리를 방문하면, 서버는 최신 스포츠 뉴스 목록을 가져와서 보여준다. 그리고 다음 사용자가 같은 카테고리를 방문할 때, 서버는 이전에 가져온 스포츠 뉴스 목록을 사용하여 페이지를 렌더링
 
 4. **스트리밍**
 
@@ -94,9 +149,15 @@ description: 서버 사이드 렌더링
 
   - 작업이 여러 덩어리로 나뉘어 각 덩어리가 준비되는 대로 클라이언트로 스트리밍
   - 전체 콘텐츠 렌더링이 완료되기 전에도 페이지의 일부를 먼저 볼 수 있게 된다.
+  - 네트워크 대기 시간을 줄이고 상호 작용 시간을 단축시킬 수 있다.
 
 - Next.js App Router에는 기본적으로 스트리밍 기능이 내장되어 있다.
+
   - 초기 페이지 로딩 성능을 개선할 뿐 아니라 느린 데이터 fetching으로 인해 전체 라우트 렌더링이 지연되는 UI에서도 도움이 된다. - ex. 제품 페이지의 리뷰
+
+- **사용 사례**
+  - 대규모 웹 애플리케이션에서 유용 (예: 소셜 미디어, 뉴스 웹사이트)
+  - 데이터 가져오기 작업이 많은 페이지에서 로딩 성능을 향상시킬 수 있다.
 
 ### Data Fetching
 
@@ -162,3 +223,79 @@ description: 서버 사이드 렌더링
     About
   </Link>
   ```
+
+### More About Server component
+
+- React 컴포넌트를 서버에서 렌더링하고 클라이언트로 전송
+- Next.js 13에서 `app` 디렉토리 내의 컴포넌트들은 기본적으로 서버 컴포넌트로 취급
+- 이를 통해 더 나은 퍼포먼스, 개발 경험, 보안성을 제공
+
+1. **향상된 퍼포먼스**
+
+   - 서버에서 미리 렌더링되므로 초기 로드 시간이 빨라진다.
+   - 정적 HTML을 전송하므로 클라이언트에서 JavaScript를 실행할 필요가 없다.
+   - 데이터 fetching을 서버에서 처리하므로 클라이언트의 리소스 사용이 줄어든다.
+
+2. **개발 편의성**
+
+   - 서버와 클라이언트 상태를 완전히 분리할 수 있다.
+   - 서버 컴포넌트에서는 브라우저 API에 의존할 필요가 없다.
+
+3. **보안성 강화**
+   - 클라이언트 사이드 공격 벡터를 제거한다.
+   - API 키나 민감한 데이터를 클라이언트에 노출하지 않아도 된다.
+
+```jsx
+// app/page.jsx
+import { fetchData } from "./api";
+
+export default async function Page() {
+  const data = await fetchData();
+
+  return (
+    <div>
+      {data.map((item) => (
+        <div key={item.id}>{item.name}</div>
+      ))}
+    </div>
+  );
+}
+```
+
+- 위 예시에서 `Page` 컴포넌트는 서버에서 렌더링되며, `fetchData` 함수를 통해 서버에서 데이터를 가져와 렌더링한다.
+- 서버 컴포넌트는 `use` 함수를 통해 다양한 리액트 훅을 활용할 수 있다.
+- `Page` 컴포넌트가 `async function` 키워드로 선언되어 있다. 이는 서버 컴포넌트에서 데이터 fetching을 위해 비동기 작업을 수행할 수 있음을 의미한다.
+-
+
+```jsx
+"use client";
+
+import { useState } from "react";
+
+export default function Counter() {
+  const [count, setCount] = useState(0);
+
+  return (
+    <div>
+      <p>Count: {count}</p>
+      <button onClick={() => setCount(count + 1)}>Increment</button>
+    </div>
+  );
+}
+```
+
+- 또한 서버 컴포넌트는 클라이언트 컴포넌트와 함께 사용할 수 있다. 클라이언트 컴포넌트는 `'use client'` 지시문을 통해 선언한다.
+
+```jsx
+// app/page.jsx
+import ClientComponent from "./client-component";
+
+export default function Page() {
+  return (
+    <div>
+      <ServerComponent />
+      <ClientComponent />
+    </div>
+  );
+}
+```
