--- a/jiyoung/chap5.mdx
+++ b/jiyoung/chap5.mdx
@@ -137,7 +137,7 @@ function Counter() {
   ```
 
 - Context는 여러 개 생성할 수 있으며, 각 Context마다 고유한 Provider와 Consumer가 있다.
-- Context API는 상태 관리와도 연결됩니다. Redux나 MobX 같은 상태 관리 라이브러리의 store를 Context에 담아 전역적으로 공유할 수 있다.
+- Context API는 상태 관리와도 연결된다. Redux나 MobX 같은 상태 관리 라이브러리의 store를 Context에 담아 전역적으로 공유할 수 있다.
 - 하지만, Context의 값이 변경되면 하위 컴포넌트 전체가 재렌더링되므로, 성능 이슈가 발생할 수 있습니다. 따라서 너무 자주 변경되는 데이터는 Context에 담지 않는 것이 좋다.
 - 또한, Context는 컴포넌트 구조와 분리되어 있어 추적이 어려울 수 있다. 이러한 단점을 보완하기 위해 리액트 공식 문서에서는 Context를 자주 업데이트되는 상태 관리보다는 테마, 로케일 정보 등의 전역 값을 공유하는 용도로 사용하는 것을 권장한다.
 
