--- a/jiyoung/chap8.mdx
+++ b/jiyoung/chap8.mdx
@@ -3,3 +3,81 @@ title: 08장 정리
 date: "2024/05/14"
 description: 좋은 리액트 코드 작성을 위한 환경 구축하기
 ---
+
+## ESLint 를 활용한 정적 코드 분석
+
+### ESLint 는 어떻게 코드를 분석할까?
+
+1. JS 를 문자열로 읽는다
+2. JS 를 분석할 수 있는 Parser 인 espee 를 사용하여 코드를 구조화 한다
+3. 2번에서 구조화한 트리(Abstract Syntax Tree)를 기준으로 각종 규칙을 대조
+4. 규칙과 대조했을 때 이를 위반한 코드를 Report or Fix
+
+#### eslint-plugin
+
+- 다양한 ESLint 규칙을 모아놓은 패키지
+
+#### eslint-config
+
+- ESLint 관련 설정을 제공하는 패키지
+
+#### eslint-config-airbnb
+
+- Airbnb 에서 만들었으며, 500여 명의 개발자가 유지보수하는 가장 유명한 규칙
+
+### 주의할 점
+
+#### 규칙에 대한 예외 처리, 그리고 React-hooks/no-exhaustive-deps
+
+- 일부 코드에서 특정 규칙을 임시로 제외시키고 싶다면, eslint-disable-주석 사용 필요
+- useEffect 나 useMemo 의 의존성 배열을 예외 처리하는 eslint-disable-line no-exhaustive-deps 를 자주 사용할 가능성이 높은데 잠재적 버그 유발이 가능하므로 주의가 필요하다.
+- 그 외에 type-script 에서 any 를 강제로 사용하기 위한 typescript-eslint/no-explicit-any 도 마찬가지다
+
+## 리액트 팀이 권장하는 리액트 테스트 라이브러리
+
+### React Testing Library 란?
+
+- DOM Testing Library 를 기반으로 만들어진 테스팅 라이브러리
+- jsdom 을 사용하여 nodes.js 환경에서 HTML 과 DOM 을 사용할 수 있게 하여 테스팅을 수행한다
+- 실제로 브라우저를 구동하여 컴포넌트를 렌더링하지 않고도, 해당 컴포넌트가 제대로 렌더링 되었는지를 확인하는 방식으로 테스팅 수행
+
+### JS 테스트의 기초
+
+1. 테스트할 함수나 모듈 선정
+2. 함수나 모듈이 반환하기 기대하는 값 설정
+3. 함수나 모듈의 실제 반환값을 계산
+4. 3번과 2번을 비교
+5. 비교 결과가 같지 않을 경우 에러 발생
+
+- 테스트 결과를 확인할 수 있도록 도와주는 라이브러리 = 어설션(Assertion) 라이브러리
+- 다만, 테스트를 위해서는 복잡한 일련의 과정이 필요하고 이를 지원하는 것이 테스팅 프레임워크. 대표저긍로 Jest, Mocha, Karma, Jasmine 등이 존재한다
+
+### Jest
+
+- 예시 코드
+
+```js
+// math.js
+function sum(a, b) {
+  return a + b;
+}
+
+module.exports = {
+  sum,
+};
+
+// math.test.js
+
+const { sum } = require("./math");
+
+test("두 인수가 덧셈이 되어야 한다.", () => {
+  expect(sum(1, 2)).toBe(3);
+});
+
+// 에러 발생 테스트
+test("두 인수가 덧셈이 되어야 한다.", () => {
+  expect(sum(2, 2)).toBe(3);
+});
+```
+
+- Node.js 의 Assertion 을 쓴 것과는 다르게 테스트를 통해 걸린 시간, 무엇이 성공하고 실패하였는지 등등 자세한 정보를 제공
