--- a/jiyoung/chap10.mdx
+++ b/jiyoung/chap10.mdx
@@ -4,65 +4,65 @@ date: "2024/05/30"
 description: 리액트 17과 18의 변경 사항 살펴보기
 ---
 
-## 10.1 리액트 17 버전 살펴보기
+## 리액트 17 버전 살펴보기
 
-### 10.1.2 이벤트 위임 방식의 변경
+### 이벤트 위임 방식의 변경
 
 - 기존의 16 버전의 리액트는 이벤트를 document 레벨에서 관리하며 필요한 이벤트를 각각의 컴포넌트에 위임하는 방식으로 작동
 - 하지만, 이렇게 할 경우 16과 17 버전이 혼재될 경우 하나의 document 에서 다른 버전의 이벤트 핸들러가 존재하게 되므로 문제가 발생할 가능성이 존재
 - 이를 해결하고, 점진적인 업그레이드가 가능하도록 17 버전에서는 이벤트 위임을 document 레벨이 아닌 컴포넌트의 최상위 루트에서 처리 하도록 변경
 
-```tsx
-import React, { MouseEvent, useEffect } from "react";
-import ReactDOM from "react-dom";
-export default function App() {
-  useEffect(() => {
-    document.addEventListener("click", (e) => {
-      console.log("이벤트가 document까지 올라옴");
-    });
-  }, []);
+  ```tsx
+  import React, { MouseEvent, useEffect } from "react";
+  import ReactDOM from "react-dom";
+  export default function App() {
+    useEffect(() => {
+      document.addEventListener("click", (e) => {
+        console.log("이벤트가 document까지 올라옴");
+      });
+    }, []);
 
-  function 안녕하세요(e: MouseEvent<HTMLButtonElement>) {
-    e.stopPropagation();
-    alert("안녕하세요!");
+    function 안녕하세요(e: MouseEvent<HTMLButtonElement>) {
+      e.stopPropagation();
+      alert("안녕하세요!");
+    }
+
+    return <button onClick={안녕하세요}>리액트 버튼</button>;
   }
 
-  return <button onClick={안녕하세요}>리액트 버튼</button>;
-}
-
-ReactDOM.render(<App />, document.getElementById("root"));
-```
+  ReactDOM.render(<App />, document.getElementById("root"));
+  ```
 
 - 위의 코드는 리액트 16과 17에서 다르게 동작
 - 16 에서는 모든 이벤트가 document 에 달려 있기 때문에 e.stopPropagation() 이 의미가 없으므로, 이벤트가 작동
 - 17 에서는 이벤트가 컴포넌트 루트에 달려 있으므로 e.stopPropagation() 가 동작하여, 이벤트가 작동하지 않는다
 
-### 10.1.4 그 밖의 주요 변경 사항
+### 그 밖의 주요 변경 사항
 
 #### 이벤트 풀링 제거
 
 - 리액트 16버전 까지의 이벤트는 이벤트 풀링이라는 기능을 이용하여, 기본 이벤트를 한번 더 감싸서 처리
 - 여러 이벤트가 모두 래핑된 이벤트 풀을 만들어 결과적으로 이벤트를 필요에 따라 재사용이 가능해 보이는 장점이 있지만, 이벤트를 받아오고 이벤트가 종료 되면 이벤트를 초기화 하기 위해 null 로 지정하는 과정에서 에러가 발생한다
-- 17 부터는 이벤트 풀링이 사라져서 문제 해결 + 모든 브라우저의 이벤트 처리 능력이 좋아져서 필요가 없어짐
+- 17 부터는 이벤트 풀링이 사라져서 문제 해결
 
 #### useEffect 클린업 함수의 비동기 실행
 
 - useEffect 의 클린업은 16 까지는 동기적으로 처리, 따라서 클린업 동작 전까지는 다른 작업이 방해되는 문제가 발생
 - 17 부터는 화면이 완전히 업데이트 된 이후 비동기적으로 클린업이 실행되어 성능이 향상
 
-## 10.2 리액트 18 버전 살펴보기
+## 리액트 18 버전 살펴보기
 
-### 10.2.1 새로 추가된 훅 살펴보기
+### 새로 추가된 훅 살펴보기
 
 #### useId
 
 - 컴포넌트별로 유니크한 값을 생성하는 훅
 
-```jsx
-export function UniqueComponent() {
-  return <div>{Math.random()}</div>;
-}
-```
+  ```jsx
+  export function UniqueComponent() {
+    return <div>{Math.random()}</div>;
+  }
+  ```
 
 - 특히 SSR 의 경우, 컴포넌트 렌더링 시의 random 값과 클라이언트가 서버에서 결과물을 받아서 다시 random 을 돌렸을 때(하이드레이션) 값이 다른 문제가 발생.
 - 18 에 추가된 useId 를 사용하면 이와 같은 문제를 해결할 수 있다
@@ -73,28 +73,28 @@ export function UniqueComponent() {
 - CSS-in-js 라이브러리를 위한 훅으로, useEffect 와 매우 유사하게 작동한다
 - useInsertionEffect 는 DOM 이 실제로 변경되기 전에 동기적으로 실행되어, 레이아웃을 계산하기 전에 실행되어 자연스러운 스타일 삽입이 가능해 진다
 
-```tsx
-import { useEffect, useInsertionEffect, useLayoutEffect } from "react";
+  ```tsx
+  import { useEffect, useInsertionEffect, useLayoutEffect } from "react";
 
-export default function useEffectSeries() {
-  useEffect(() => {
-    console.log("useEffect!"); // 3
-  });
-  useLayoutEffect(() => {
-    console.log("useLayoutEffect!"); // 2
-  });
-  useInsertionEffect(() => {
-    console.log("useInsertionEffect!"); // 1
-  });
+  export default function useEffectSeries() {
+    useEffect(() => {
+      console.log("useEffect!"); // 3
+    });
+    useLayoutEffect(() => {
+      console.log("useLayoutEffect!"); // 2
+    });
+    useInsertionEffect(() => {
+      console.log("useInsertionEffect!"); // 1
+    });
 
-  return <></>;
-}
-```
+    return <></>;
+  }
+  ```
 
 - 순서는 useInsertionEffect -> useEffectLayout -> useEffect 순으로 일어난다
 - DOM 변경이 일어나기 전에 스타일을 입혀야 DOM 에 따른 Layout 재계산이 필요 없으므로, 효율성에서 차이를 보인다
 
-### 10.2.2. react-dom/client
+### react-dom/client
 
 - 클라이언트에서 리액트 트리를 만들 때 사용하는 API 변경으로 리액트 18로 이전 버전을 업그레이드 할 경우 index.jsx 또는 tsx 파일을 변경
 
@@ -102,66 +102,146 @@ export default function useEffectSeries() {
 
 - 기존의 render 메서드를 대체하는 메서드
 
-```tsx
-// before
-import ReactDOM from "react-dom";
-import App from "App";
-const container = document.getElementById("root");
-ReactDOM.render(<App />, container);
+  ```tsx
+  // before
+  import ReactDOM from "react-dom";
+  import App from "App";
+  const container = document.getElementById("root");
+  ReactDOM.render(<App />, container);
 
-// after
-import ReactDOM from "react-dom";
-import App from "App";
-const container = document.getElementById("root");
-const root = ReactDOM.createRoot(container);
-root.render(<App />);
-```
+  // after
+  import ReactDOM from "react-dom";
+  import App from "App";
+  const container = document.getElementById("root");
+  const root = ReactDOM.createRoot(container);
+  root.render(<App />);
+  ```
 
 #### hydrateRoot
 
 - SSR 에서 하이드레이션을 하기 위한 메서드
 - [참고](https://velog.io/@hyemin916/%EB%B2%88%EC%97%AD-%EB%A6%AC%EC%95%A1%ED%8A%B8-%EC%95%B1SSR%EC%9D%98-Hydration-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0)
 
-```tsx
-// before
-import ReactDOM from "react-dom";
-import App from "App";
-const container = document.getElementById("root");
-ReactDOM.hydrate(<App />, container);
+  ```tsx
+  // before
+  import ReactDOM from "react-dom";
+  import App from "App";
+  const container = document.getElementById("root");
+  ReactDOM.hydrate(<App />, container);
 
-// after
-import ReactDOM from "react-dom";
-import App from "App";
-const container = document.getElementById("root");
-const root = ReactDOM.hydrateRoot(container, <App />);
-```
+  // after
+  import ReactDOM from "react-dom";
+  import App from "App";
+  const container = document.getElementById("root");
+  const root = ReactDOM.hydrateRoot(container, <App />);
+  ```
 
-### 10.2.6 Suspense 기능 강화
+### Suspense 기능 강화
 
 - 컴포넌트를 동적으로 가저올 수 있게 도와주는 기능
 - Suspense 는 컴포넌트를 미처 불러오지 못했을 때 보여주는 fallback 과, children 으로 로딩 완료시 보여주는 컴포넌트를 인자로 받는다
 
-```tsx
-// Sample Component
-export default function SampleCompnent() {
-  return <>동적으로 가져오는 컴포넌트</>;
-}
+  ```tsx
+  // Sample Component
+  export default function SampleCompnent() {
+    return <>동적으로 가져오는 컴포넌트</>;
+  }
 
-// app.tsx
-import { Suspense, lazy } from "react";
+  // app.tsx
+  import { Suspense, lazy } from "react";
 
-const DynamicSampleComponent = lazy(() => import("./SampleComponent"));
+  const DynamicSampleComponent = lazy(() => import("./SampleComponent"));
 
-export default function App() {
-  return (
-    <Suspense fallback={<>로딩중</>}>
-      <DynamicSampleComponent />
-    </Suspense>
-  );
-}
-```
+  export default function App() {
+    return (
+      <Suspense fallback={<>로딩중</>}>
+        <DynamicSampleComponent />
+      </Suspense>
+    );
+  }
+  ```
 
 #### 18 버전에서 해결 된 Suspense 의 문제점
 
 - 컴포넌트가 보이기도 전에 useEffect 가 먼저 작동하는 문제
 - SSR 에서는 제대로 작동하지 않는 문제
+
+---
+
+**Concurrent Rendering**
+
+- 새로운 concurrent 렌더링 아키텍처를 통해 대규모 애플리케이션의 렌더링 속도를 향상
+- 렌더링 과정이 중단되고 다시 시작할 수 있어 우선순위가 높은 업데이트를 먼저 렌더링
+- Concurrent 모드를 활성화하려면 `ReactDOM.createRoot()`를 사용
+
+  ```jsx
+  import ReactDOM from "react-dom/client";
+
+  const root = ReactDOM.createRoot(document.getElementById("root"));
+  root.render(<App />);
+  ```
+
+**Automatic Batching**
+
+- 이전 버전에서는 이벤트 핸들러 내부에서 state를 업데이트할 때 리렌더링이 여러 번 발생
+  - 이를 방지하기 위해 `React.unstable_batchedUpdates`와 같은 API를 사용하여 수동으로 batch
+- React 18부터는 자동으로 batching => 성능 향상과 코드 간소화가 가능
+
+  - 자동 batching은 기본적으로 비활성화되어 있으며, `ReactDOM.unstable_batchedUpdates`로 활성화
+
+  ```jsx
+  import ReactDOM from "react-dom";
+
+  function handleClick() {
+    // 상태 업데이트가 개별적으로 이루어져 렌더링이 두 번 발생
+    setCount((c) => c + 1);
+    setFlag((f) => !f);
+  }
+
+  // 수동 batching을 통해 하나의 렌더링으로 처리
+  ReactDOM.unstable_batchedUpdates(() => {
+    setCount((c) => c + 1);
+    setFlag((f) => !f);
+  });
+  ```
+
+- 18 버전
+
+  ```jsx
+  function handleClick() {
+    // 자동으로 batch 처리되어 렌더링이 한 번만 발생
+    setCount((c) => c + 1);
+    setFlag((f) => !f);
+  }
+  ```
+
+- **Batch**
+
+  - batch는 여러 작업을 하나로 모아서 처리하는 개념으로 리액트에서는 주로 state 업데이트를 batching하여 불필요한 렌더링을 줄이고 성능을 최적화한다.
+
+    ```jsx
+    function handleClick() {
+      setCount(count + 1); // 첫 번째 렌더링
+      setFlag(!flag); // 두 번째 렌더링
+    }
+    ```
+
+    - 여기서 `setCount`와 `setFlag`는 각각 별도의 state 업데이트를 트리거하므로 렌더링이 두 번 발생합니다. 하지만 이 두 업데이트를 batch로 묶으면 하나의 렌더링만 발생
+
+    ```jsx
+    ReactDOM.unstable_batchedUpdates(() => {
+      setCount(count + 1);
+      setFlag(!flag);
+    }); // 한 번의 렌더링
+    ```
+
+    - `ReactDOM.unstable_batchedUpdates` 함수 내부에서 실행된 모든 state 업데이트는 하나의 batch로 처리되어 렌더링 횟수가 최소화
+
+**New Strict Mode Behaviors**
+
+- `React.StrictMode`의 동작이 변경
+
+**New Hooks**
+
+- `useTransition` Hook: 상태 업데이트의 우선순위를 지정하는 훅
+- `useDeferredValue` Hook: 값을 지연시켜 렌더링하는 훅
