add chap 11 desc

--- a/jiyoung/chap11.mdx
+++ b/jiyoung/chap11.mdx
@@ -8,7 +8,7 @@ description: Next.js 13과 React 18
 
 ### 기존 리액트 컴포넌트와 서버 사이드 렌더링의 한계
 
-- 기존 SSR 의 방식, 서버에서 DOM 을 불러오고 클라이언트는 만들어진 DOM 을 기준으로 하이드레이션을 진행하여 이벤트 핸들러를 DOM 에 추가하고 요청에 따라 응답하는 방식은 한계가 잇다.
+- 기존 SSR 의 방식, 서버에서 DOM 을 불러오고 클라이언트는 만들어진 DOM 을 기준으로 하이드레이션을 진행하여 이벤트 핸들러를 DOM 에 추가하고 요청에 따라 응답하는 방식은 한계가 있다.
 - 자바스크립트 번들크기가 0인 컴포넌트 생성이 불가능. 타 라이브러리 사용시 서버와 클라이언트 모두 해당 라이브러리를 로딩해야 하는 단점이 발생
 - 백엔드 리소스에 직접적 접근이 불가능
 - 자동 코드 분할이 불가능. 코드를 여러 단위로 나누어 필요할 때만 동적으로 로딩하는 기능을 리액트에서는 lazy 로 구현이 가능하지만 SSR 에서는 항상 lazy 로 감싸줘야만 하며 동적 판단에 따라 어떤 컴포넌트를 미리 그릴지 판단이 어렵다
