add chap 12 desc

--- a/jiyoung/chap12.mdx
+++ b/jiyoung/chap12.mdx
@@ -10,7 +10,7 @@ description: 모든 웹 개발자가 관심을 가져야 할 핵심 웹 지표
   - LCP(Largest Contentful Pain) : 가장 큰 용량의 컨텐츠가 그려지는 시간
   - FID(Frist Inpur Delay) : 최초 입력 지연
   - CLS(Cumulative Layout Shift) : 누적 레이아웃 이동
-  - TTFB(Time To Fisrt Byte)
+  - TTFB(Time To Fisrt Byte) : 최초 바이트까지의 시간
   - FCP(Fisrt Contentful Paint) : 최초 콘텐츠풀 시간
 
 ## LCP(Largest Contentful Paint)
